2007-12-01  Mathias Hasselmann  <mathias@openismus.com>

	Provide an example demonstrating desktop usage of EpcPublisher.

	* examples/publisher-ui.c: Demonstrate desktop usage of EpcPublisher.
	* examples/publisher.ui: User interface for examples/publisher-ui.c.
	* examples/publisher.glade: Glade source for examples/publisher.ui.
	* Makefile.am, examples/.gitignore: Add examples/publisher-ui.c.
	* libepc/publisher.c, libepc/publisher.h: Let epc_publisher_quit
	report if the built-in server was still/already running.

2007-11-30  Mathias Hasselmann  <mathias@openismus.com>

	Add epc_publisher_lookup and epc_publisher_has_key to allow usage of
	EpcPublisher as local key/value store: This allows applications with
	dynamic key to prevent key name collisions without having to maintain
	an additional GHashTable.

	* docs/reference/libepc/libepc-1.0-sections.txt: Update symbols.
	* libepc/publisher.c, libepc/publisher.h: Add epc_publisher_lookup
	and epc_publisher_has_key.

2007-11-30  Mathias Hasselmann  <mathias@openismus.com>

	Repair epc_publisher_handle_list_path.

	* libepc/publisher.c: Always initialize file list.

2007-11-30  Mathias Hasselmann  <mathias@openismus.com>

	Don't mess around with GDK's broken threading support: This ugly
	and fat non-recursive big lock hurts more than it helps.

	* libepc/shell.c, libepc/shell.h, libepc/consumer.c,
	tests/framework.c: Remove epc_shell_leave and epc_shell_enter.
	* examples/consumer-ui.c, examples/server-credentials.c:
	Don't call gdk_threads_init.

2007-11-30  Mathias Hasselmann  <mathias@openismus.com>

	Do not pass NULL data to epc_contents_new, when passing empty strings
	to epc_contents_new_dup.

	* libepc/contents.c: Handle empty strings in epc_contents_new_dup.

2007-11-30  Mathias Hasselmann  <mathias@openismus.com>

	Show message on root page when no resources have been published yet.

	* libepc/publisher.c: Enhance epc_publisher_handle_root.

2007-11-29  Mathias Hasselmann  <mathias@openismus.com>
